Update .gitignore from Pythonista

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,9 @@ venv/
 Thumbs.db
 
 # === Plik z sekretami ===
-secrets.py
+mysecrets.py
 
 # === Pliki bazy danych lokalnej ===
 *.sqlite3
+
+upload.yml 
