--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -20,9 +20,7 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         source: "."                     # katalog repo do wysłania
         target: "/home/ubuntu/niobot_pg"
-        overwrite: true
-        rm: true                        # usuń stare pliki, jak --delete w rsync
-        tar: false
+        overwrite: true                        # usuń stare pliki, jak --delete w rsy
     - name: Restart service on server
       uses: appleboy/ssh-action@v1.1.0
       with:
