--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,4 +1,4 @@
-name: Upload files to server
+name: Upload files to server (rsync)
 
 on:
   push:
@@ -8,30 +8,39 @@ on:
 jobs:
   upload:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
-
-      - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.5.3
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          fetch-depth: 0
 
-      - name: Upload files via SCP
-        uses: appleboy/scp-action@v1
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: |
-            ./*
-            !.git/
-            !.gitignore
-            !README.md
-            !LICENSE
-            !.github/
-            !docs/
-            !tests/
-          target: "/home/ubuntu/niobot_pg"
-          overwrite: true
+      - name: Install rsync & ssh
+        run: sudo apt-get update && sudo apt-get install -y rsync openssh-client
+
+      - name: Setup SSH
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H "$SSH_HOST" >> ~/.ssh/known_hosts
+
+      - name: Upload files with rsync
+        env:
+          SSH_USER: ${{ secrets.SSH_USER }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+          SSH_PORT: ${{ secrets.SSH_PORT || '22' }}
+        run: |
+          SRC="./"
+          DEST="/home/ubuntu/niobot_pg"
+
+          rsync -avz --progress \
+            --exclude='.git' \
+            --exclude-from='.gitignore' \
+            -e "ssh -i ~/.ssh/id_rsa -p $SSH_PORT -o StrictHostKeyChecking=yes" \
+            $SRC ${SSH_USER}@${SSH_HOST}:$DEST
+
 
